--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "lint": "biome check ."
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.5.0",
-    "minimist": "^1.2.8",
-    "resend": "^4.1.2",
-    "zod": "^3.24.2"
+    "@modelcontextprotocol/sdk": "1.25.2",
+    "minimist": "1.2.8",
+    "resend": "6.7.0",
+    "zod": "4.3.5"
+  },
+  "engines": {
+    "node": ">=20"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.10",
-    "@types/minimist": "^1.2.5",
-    "@types/node": "^22.13.5",
-    "typescript": "^5.7.3"
+    "@types/minimist": "1.2.5",
+    "@types/node": "25.0.3",
+    "typescript": "5.9.3"
   }
 }
