--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
   "name": "send-email",
   "version": "1.1.0",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
   "license": "MIT",
-  "description": "",
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.5.0",
-    "minimist": "^1.2.8",
-    "resend": "^4.1.2",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/minimist": "^1.2.5",
-    "@types/node": "^22.13.5",
-    "typescript": "^5.7.3"
-  },
+  "module": "build/index.js",
   "type": "module",
   "scripts": {
     "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
     "lint:fix": "biome check . --write",
     "lint": "biome check ."
+  },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "1.25.2",
+    "minimist": "1.2.8",
+    "resend": "6.7.0",
+    "zod": "4.3.5"
+  },
+  "engines": {
+    "node": ">=20"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "2.3.10",
+    "@types/minimist": "1.2.5",
+    "@types/node": "25.0.3",
+    "typescript": "5.9.3"
   }
 }
