--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "@types/minimist": "1.2.5",
     "@types/node": "25.0.3",
     "typescript": "5.9.3"
-  }
+  },
+  "packageManager": "pnpm@10.28.2"
 }
