refactor: remove index.ts and update build paths in package.json and README.md
- Deleted the index.ts file, consolidating the email sending service logic.
- Updated build paths in package.json and README.md to reflect the new structure.
- Adjusted CLI options and environment variable descriptions for clarity.

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "send-email",
   "version": "1.1.0",
   "license": "MIT",
-  "module": "build/index.js",
+  "module": "build/src/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
+    "build": "tsc && node -e \"require('fs').chmodSync('build/src/index.js', '755')\"",
     "inspector": "npx @modelcontextprotocol/inspector@latest",
     "lint": "biome check .",
     "lint:fix": "biome check . --write"
