--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && node -e \"require('fs').chmodSync('build/src/index.js', '755')\"",
     "inspector": "npx @modelcontextprotocol/inspector@latest",
     "lint": "biome check .",
-    "lint:fix": "biome check . --write"
+    "lint:fix": "biome check . --write",
+    "test": "vitest run"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.25.2",
@@ -23,7 +24,8 @@
     "@biomejs/biome": "2.3.10",
     "@types/minimist": "1.2.5",
     "@types/node": "25.0.3",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "vitest": "3.2.4"
   },
   "packageManager": "pnpm@10.28.2"
 }
