--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "type": "module",
   "scripts": {
     "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
+    "dev": "node build/index.js --http --port 3000",
+    "start": "node build/index.js",
     "inspector": "npx @modelcontextprotocol/inspector@latest",
     "lint": "biome check .",
     "lint:fix": "biome check . --write"
   },
   "dependencies": {
+    "@mcp-ui/server": "^6.0.1",
     "@modelcontextprotocol/sdk": "1.25.2",
+    "express": "^5.2.1",
     "minimist": "1.2.8",
     "resend": "6.9.1",
     "zod": "4.3.6"
@@ -21,6 +25,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.10",
+    "@types/express": "^5.0.0",
     "@types/minimist": "1.2.5",
     "@types/node": "25.0.3",
     "typescript": "5.9.3"
