--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "send-email",
-  "version": "1.1.0",
+  "name": "resend-mcp",
+  "version": "2.0.0",
   "license": "MIT",
   "module": "build/index.js",
   "type": "module",
