--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "resend-mcp",
   "version": "2.0.0",
   "license": "MIT",
-  "module": "build/index.js",
   "type": "module",
+  "bin": {
+    "resend-mcp": "dist/index.js"
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
+    "build": "tsc && node -e \"require('fs').chmodSync('dist/index.js', '755')\"",
+    "prepare": "npm run build",
     "inspector": "npx @modelcontextprotocol/inspector@latest",
     "lint": "biome check .",
     "lint:fix": "biome check . --write"
