--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "send-email",
-  "version": "1.1.0",
+  "name": "resend-mcp",
+  "version": "2.0.1",
   "license": "MIT",
-  "module": "build/src/index.js",
   "type": "module",
+  "bin": {
+    "resend-mcp": "dist/index.js"
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "tsc && node -e \"require('fs').chmodSync('build/src/index.js', '755')\"",
+    "build": "tsc && node -e \"require('fs').chmodSync('dist/index.js', '755')\"",
+    "prepare": "npm run build",
     "inspector": "npx @modelcontextprotocol/inspector@latest",
     "lint": "biome check .",
     "lint:fix": "biome check . --write",
@@ -13,6 +19,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.25.2",
+    "express": "^5.2.1",
     "minimist": "1.2.8",
     "resend": "6.9.1",
     "zod": "4.3.6"
